--- a/src/Winhance.UI/Features/Common/Resources/SettingTemplates.xaml
+++ b/src/Winhance.UI/Features/Common/Resources/SettingTemplates.xaml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ResourceDictionary
+    x:Class="Winhance.UI.Features.Common.Resources.SettingTemplates"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:viewModels="using:Winhance.UI.Features.Optimize.ViewModels"
+    xmlns:models="using:Winhance.UI.Features.Common.Models"
+    xmlns:controls="using:CommunityToolkit.WinUI.Controls"
+    xmlns:commonControls="using:Winhance.UI.Features.Common.Controls">
 
     <!-- Common spacing for settings cards -->
     <x:Double x:Key="SettingsCardSpacing">4</x:Double>
@@ -25,5 +30,76 @@
             <Setter Property="Margin" Value="1,30,0,6" />
         </Style.Setters>
     </Style>
+
+    <!-- Badge ItemTemplate - shared across all settings pages -->
+    <DataTemplate x:Key="BadgeItemTemplate" x:DataType="models:SettingBadgeInfo">
+        <commonControls:SettingBadge
+            BadgeType="{x:Bind Type}"
+            Text="{x:Bind Text}"
+            Tooltip="{x:Bind Tooltip}"/>
+    </DataTemplate>
+
+    <!-- SettingItemTemplate - shared template for SettingsCard with badge support -->
+    <DataTemplate x:Key="SettingItemTemplate" x:DataType="viewModels:SettingItemViewModel">
+        <controls:SettingsCard
+            Visibility="{x:Bind IsVisible, Converter={StaticResource BooleanToVisibilityConverter}}"
+            Header="{x:Bind Name}"
+            Description="{x:Bind Description}"
+            IsEnabled="{x:Bind EffectiveIsEnabled}"
+            HeaderIcon="{x:Bind Converter={StaticResource SettingIconConverter}}"
+            Padding="16,12,16,12">
+            <!-- Content: Grid with dynamic badge column for uniform alignment -->
+            <Grid VerticalAlignment="Center">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>  <!-- Control -->
+                    <ColumnDefinition Width="{x:Bind BadgeColumnWidth, Mode=OneWay}"/>  <!-- Badge column (width set by parent ViewModel) -->
+                </Grid.ColumnDefinitions>
+
+                <!-- Setting control -->
+                <commonControls:SettingsCardItem Grid.Column="0" Setting="{x:Bind}" VerticalAlignment="Center"/>
+
+                <!-- Badges (stacked vertically, in dynamic-width column) -->
+                <ItemsControl
+                    Grid.Column="1"
+                    ItemsSource="{x:Bind Badges}"
+                    Visibility="{x:Bind HasBadges, Converter={StaticResource BooleanToVisibilityConverter}}"
+                    VerticalAlignment="Center"
+                    HorizontalAlignment="Right"
+                    Margin="8,0,0,0"
+                    ItemTemplate="{StaticResource BadgeItemTemplate}">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <StackPanel Orientation="Vertical" Spacing="4"/>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                </ItemsControl>
+            </Grid>
+        </controls:SettingsCard>
+    </DataTemplate>
+
+    <!-- ListViewItem container style for settings lists - removes default padding/margins -->
+    <Style x:Key="SettingsListViewItemContainerStyle" TargetType="ListViewItem">
+        <Setter Property="Padding" Value="0"/>
+        <Setter Property="Margin" Value="0"/>
+        <Setter Property="MinHeight" Value="0"/>
+        <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="ListViewItem">
+                    <ContentPresenter
+                        Content="{TemplateBinding Content}"
+                        ContentTemplate="{TemplateBinding ContentTemplate}"
+                        HorizontalAlignment="Stretch"/>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <!-- Group header template for settings lists -->
+    <DataTemplate x:Key="SettingsGroupHeaderTemplate">
+        <TextBlock
+            Text="{Binding Key}"
+            Style="{StaticResource SettingsSectionHeaderTextBlockStyle}"/>
+    </DataTemplate>
 
 </ResourceDictionary>
